--- a/social-editor/index.html
+++ b/social-editor/index.html
@@ -8,7 +8,31 @@
     <link rel="stylesheet" href="style.css">
     <title>Social Editor</title>
 </head>
-<body>
-    <p>Test</p>
+<body class="app">
+    <!-- Header -->
+    <header class="header">
+        <img class="logo" src="https://bytegrad.com/course-assets/css/1/logo.svg" alt="logo">
+        <button class="dd-toggle">
+            File
+        </button>
+        <button class="dd-toggle">
+            View
+        </button>
+        <button class="dd-toggle">
+            New
+        </button>
+        <button class="dd-toggle">
+            <i class="fas fa-crown dd-toggle__icon"></i>
+        </button>
+        <button class="dd-toggle">
+            <i class="fas fa-bell dd-toggle__icon"></i>
+        </button>
+        <button class="dd-toggle">
+            <img src="https://images.unsplash.com/photo-1614247484197-9c6164bb532f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&fit=crop&w=60&q=100" alt="user photo" class="dd-toggle__img">
+            <span class="dd-toggle__text">
+                Example U.
+            </span>
+        </button>
+    </header>
 </body>
 </html>
