--- a/social-editor/index.html
+++ b/social-editor/index.html
@@ -34,5 +34,47 @@
             </span>
         </button>
     </header>
+
+    <!-- Content -->
+    <div class="app__container">
+
+        <!-- Sidebar -->
+        <div class="sidebar">
+            <section class="menu">
+                <button class="menu__button">
+                    <i class="fas fa-layer-group menu__icon"></i>
+                    <span class="menu__text">Templates</span>
+                </button>
+                <button class="menu__button menu__button--active">
+                    <i class="fas fa-image menu__icon"></i>
+                    <span class="menu__text">Images</span>
+                </button>
+                <button class="menu__button">
+                    <i class="fas fa-font menu__icon"></i>
+                    <span class="menu__text">Text/Font</span>
+                </button>
+                <button class="menu__button">
+                    <i class="fas fa-shapes menu__icon"></i>
+                    <span class="menu__text">Shapes</span>
+                </button>
+            </section>
+
+            <!-- Footer -->
+            <footer class="footer">
+                <small class="copyright">&copy; 2023 SocialEditor. All rights reserved.</small>
+            </footer>
+        </div>
+
+        <!-- Panel -->
+        <section class="panel">
+
+        </section>
+
+        <!-- Main -->
+        <main class="main">
+
+        </main>
+
+    </div>
 </body>
 </html>
