Complete upload and footer sections of the sidebar

--- a/better-photos/index.html
+++ b/better-photos/index.html
@@ -67,11 +67,23 @@
             </section>
 
             <section class="upload">
-
+                <div class="upload__container">
+                    <i class="fas fa-cloud-upload-alt upload__icon"></i>
+                    <p class="upload__text">Drag and drop photo</p>
+                    <p class="upload__alternative">or <span class="u-underline u-accent">browse folder</span></p>
+                </div>
             </section>
 
             <footer class="footer">
-
+                <small class="copyright">&copy; 2023 Better Photos</small>
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Terms & Conditions</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Privacy Policy</a>
+                    </li>
+                </ul>
             </footer>
         </div>
 
