Make page responsive, add production folder, minify

--- a/better-photos/src/index.html
+++ b/better-photos/src/index.html
@@ -149,7 +149,7 @@
             </section>
             <section class="step">
                 <i class="fas fa-cogs step__icon step__icon--3"></i>
-                <h2 class="second-heading">Improve your skill</h2>
+                <h2 class="second-heading">Improve your skills</h2>
                 <p class="step__text">Morbi <span class="u-bold u-italic">id ipsum</span> sed enim interdum hendrerit eget quis dui. Integer ad.</p>
             </section>
         </section>
