Create layout for the navigation and hero sections

--- a/recall/index.html
+++ b/recall/index.html
@@ -10,8 +10,35 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Playfair+Display:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 <body>
+    <header>
+        <div class="wrapper navbar">
+            <a href="#" class="logo">Recall</a>
+            <nav>
+                <ul>
+                    <li><a href="#" class="active">Home</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Support</a></li>
+                </ul>
+            </nav>
+            <a href="#" class="header-cta">Download Recall</a>
+        </div>
+    </header>
+
+    <section class="hero">
+        <div class="wrapper">
+            <div class="left-col">
+                <h1>Recording scammers has never been easier.</h1>
+                <p class="subhead">Simply answer, click recored, and the rest is history.</p>
+                <div class="cta-btns">
+                    <a href="#" class="gplay"><img src="assets/googleplay.svg" alt="Google play"></a>
+                    <a href="#" class="appstore"><img src="assets/appstore.svg" alt="Apple store"></a>
+                </div>
+            </div>
+            <div class="right-col">
+                <img src="assets/phone.svg" alt="Phone illustration" class="phone">
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
-
-
