--- a/recall/index.html
+++ b/recall/index.html
@@ -56,6 +56,24 @@
                         explicabo necessitatibus harum nesciunt a sunt ratione. Natus ipsa, id rerum minus, molestias
                         minima facere non dolorem a adipisci sequi ad libero! Hic accusamus ab modi!</p>
                 </li>
+                <li>
+                    <strong>
+                        <span>Fast</span>
+                    </strong>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde deserunt suscipit obcaecati
+                        repellat, quibusdam consectetur ipsa odit tempora vitae magnam quisquam culpa quos inventore,
+                        explicabo necessitatibus harum nesciunt a sunt ratione. Natus ipsa, id rerum minus, molestias
+                        minima facere non dolorem a adipisci sequi ad libero! Hic accusamus ab modi!</p>
+                </li>
+                <li>
+                    <strong>
+                        <span>Reliable</span>
+                    </strong>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde deserunt suscipit obcaecati
+                        repellat, quibusdam consectetur ipsa odit tempora vitae magnam quisquam culpa quos inventore,
+                        explicabo necessitatibus harum nesciunt a sunt ratione. Natus ipsa, id rerum minus, molestias
+                        minima facere non dolorem a adipisci sequi ad libero! Hic accusamus ab modi!</p>
+                </li>
             </ul>
         </div>
     </section>
