Add styles for testimonials and footer sections

--- a/recall/index.html
+++ b/recall/index.html
@@ -88,11 +88,11 @@
                     voluptatum omnis.</p>
             </div>
             <div class="testimonial-info">
-                <img src="asset/person.jpg" alt="Customer quote" class="author-pic">
+                <img src="assets/person.jpg" alt="Customer quote" class="author-pic">
                 <div class="author">
                     <strong>Jane Doe</strong>
                     <a href="#">https://somecompanyllc.com</a>
-                    <ul>
+                    <ul class="social-nav">
                         <li>
                             <a href="#">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
