Add responsive styles for Features and Testimonials sections on tablet devices

--- a/recall/index.html
+++ b/recall/index.html
@@ -90,8 +90,11 @@
             <div class="testimonial-info">
                 <img src="assets/person.jpg" alt="Customer quote" class="author-pic">
                 <div class="author">
-                    <strong>Jane Doe</strong>
-                    <a href="#">https://somecompanyllc.com</a>
+                    <div>
+                        <strong>Jane Doe</strong>
+                        <a href="#">https://somecompanyllc.com</a>
+                    </div>
+
                     <ul class="social-nav">
                         <li>
                             <a href="#">
