Add responsive styles for all sections on desktop

--- a/recall/index.html
+++ b/recall/index.html
@@ -52,27 +52,24 @@
                         <span>Secure</span>
                     </strong>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde deserunt suscipit obcaecati
-                        repellat, quibusdam consectetur ipsa odit tempora vitae magnam quisquam culpa quos inventore,
-                        explicabo necessitatibus harum nesciunt a sunt ratione. Natus ipsa, id rerum minus, molestias
-                        minima facere non dolorem a adipisci sequi ad libero! Hic accusamus ab modi!</p>
+                        repellat, quibusdam consectetur ipsa odit tempora vitae magnam quisquam culpa quos inventore.
+                    </p>
                 </li>
                 <li>
                     <strong>
                         <span>Fast</span>
                     </strong>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde deserunt suscipit obcaecati
-                        repellat, quibusdam consectetur ipsa odit tempora vitae magnam quisquam culpa quos inventore,
-                        explicabo necessitatibus harum nesciunt a sunt ratione. Natus ipsa, id rerum minus, molestias
-                        minima facere non dolorem a adipisci sequi ad libero! Hic accusamus ab modi!</p>
+                        repellat, quibusdam consectetur ipsa odit tempora vitae magnam quisquam culpa quos inventore.
+                    </p>
                 </li>
                 <li>
                     <strong>
                         <span>Reliable</span>
                     </strong>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde deserunt suscipit obcaecati
-                        repellat, quibusdam consectetur ipsa odit tempora vitae magnam quisquam culpa quos inventore,
-                        explicabo necessitatibus harum nesciunt a sunt ratione. Natus ipsa, id rerum minus, molestias
-                        minima facere non dolorem a adipisci sequi ad libero! Hic accusamus ab modi!</p>
+                        repellat, quibusdam consectetur ipsa odit tempora vitae magnam quisquam culpa quos inventore.
+                    </p>
                 </li>
             </ul>
         </div>
@@ -84,8 +81,7 @@
                 <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, iste pariatur a molestias earum
                     deleniti numquam eveniet voluptatem maxime reprehenderit.</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor delectus, enim similique reiciendis ab
-                    vero natus tenetur ad nam nesciunt et aut inventore, nobis molestiae dignissimos sapiente laborum
-                    voluptatum omnis.</p>
+                    vero natus tenetur ad nam nesciunt et aut inventore.</p>
             </div>
             <div class="testimonial-info">
                 <img src="assets/person.jpg" alt="Customer quote" class="author-pic">
