--- a/designalytics/index.html
+++ b/designalytics/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,169 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
 
+<body>
+    <div class="wrapper">
+        <header class="primary">
+            <!-- logo -->
+            <a href="#" class="logo">
+                <img src="assets/logo.svg" alt="Designalytics logo">
+            </a>
+            <div class="header-right">
+                <nav>
+                    <!-- avatar -->
+                    <div class="user">
+                        <img src="assets/user.jpg" alt="User profile photo">
+                        <a href="#">Jane Doe</a>
+                    </div>
+                    <!-- sign out button -->
+                    <a href="#" class="signout hide-mobile">Sign out</a>
+                </nav>
+                <a href="#" class="menu hide-tablet">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="42" height="42" viewBox="0 0 42 42">
+                        <path
+                            d="M 0 7.5 L 0 12.5 L 50 12.5 L 50 7.5 Z M 0 22.5 L 0 27.5 L 50 27.5 L 50 22.5 Z M 0 37.5 L 0 42.5 L 50 42.5 L 50 37.5 Z">
+                        </path>
+                    </svg>
+                </a>
+            </div>
+        </header>
+        <div class="col2">
+            <!-- sidebar nav -->
+            <aside>
+                <img src="assets/mobile-exit.svg" alt="Exit mobile nav" class="exit hide-tablet">
+                <nav>
+                    <ul>
+                        <li class="active">
+                            <img src="assets/icon-home.svg" alt="Home" class="hide-mobile">
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <img src="assets/icon-messages.svg" alt="Messages" class="hide-mobile">
+                            <a href="#">Messages</a>
+                        </li>
+                        <li>
+                            <img src="assets/icon-account.svg" alt="Account" class="hide-mobile">
+                            <a href="#">Account</a>
+                        </li>
+                        <li>
+                            <img src="assets/icon-support.svg" alt="Support" class="hide-mobile">
+                            <a href="#">Support</a>
+                        </li>
+                    </ul>
+                    <div class="premium hide-mobile">
+                        <header>
+                            <h3>Go Premium!</h3>
+                            <a href="#" class="right-btn">
+                                <img src="assets/right-btn.svg" alt="Go premium">
+                            </a>
+                        </header>
+                        <p>For $5 extra, you can gain all of these other features.</p>
+                    </div>
+                </nav>
+            </aside>
+            <!-- content -->
+            <main>
+                <!-- sales -->
+                <div class="sales">
+                    <div class="label">
+                        <h2>13</h2>
+                        <div class="subtitle">Sales</div>
+                    </div>
+                    <img src="assets/chart-top.svg" alt="Earnings chart">
+                </div>
+                <!-- stats -->
+                <div class="extra-stats">
+                    <ul>
+                        <li>
+                            <strong>$756</strong>
+                            <div class="subtitle">Today's Sales</div>
+                        </li>
+                        <li>
+                            <strong>$4,301</strong>
+                            <div class="subtitle">Last 7 Days</div>
+                        </li>
+                        <li>
+                            <strong>18<span>%</span></strong>
+                            <div class="subtitle">Conversion</div>
+                        </li>
+                    </ul>
+                </div>
+                <!-- earnings -->
+                <div class="earnings">
+                    <h1>Earnings &amp; Visitors</h1>
+                    <div class="chart-container secondary">
+                        <img src="assets/chart.svg" alt="Earnings chart">
+                    </div>
+                </div>
+                <!-- customers -->
+                <div class="customers">
+                    <ul>
+                        <li>
+                            <div class="user-left">
+                                <img src="assets/user.jpg" alt="User profile image">
+                                <div class="user-info">
+                                    <strong>Jane Doe</strong>
+                                    <span>Google Ads</span>
+                                </div>
+                            </div>
+                            <a href="#" class="cta-btn">
+                                <img src="assets/right-btn.svg" alt="View user info">
+                            </a>
+                        </li>
+                        <li>
+                            <div class="user-left">
+                                <img src="assets/user.jpg" alt="User profile image">
+                                <div class="user-info">
+                                    <strong>Jane Doe</strong>
+                                    <span>Google Ads</span>
+                                </div>
+                            </div>
+                            <a href="#" class="cta-btn">
+                                <img src="assets/right-btn.svg" alt="View user info">
+                            </a>
+                        </li>
+                        <li>
+                            <div class="user-left">
+                                <img src="assets/user.jpg" alt="User profile image">
+                                <div class="user-info">
+                                    <strong>Jane Doe</strong>
+                                    <span>Google Ads</span>
+                                </div>
+                            </div>
+                            <a href="#" class="cta-btn">
+                                <img src="assets/right-btn.svg" alt="View user info">
+                            </a>
+                        </li>
+                        <li>
+                            <div class="user-left">
+                                <img src="assets/user.jpg" alt="User profile image">
+                                <div class="user-info">
+                                    <strong>Jane Doe</strong>
+                                    <span>Google Ads</span>
+                                </div>
+                            </div>
+                            <a href="#" class="cta-btn">
+                                <img src="assets/right-btn.svg" alt="View user info">
+                            </a>
+                        </li>
+                        <li>
+                            <div class="user-left">
+                                <img src="assets/user.jpg" alt="User profile image">
+                                <div class="user-info">
+                                    <strong>Jane Doe</strong>
+                                    <span>Google Ads</span>
+                                </div>
+                            </div>
+                            <a href="#" class="cta-btn">
+                                <img src="assets/right-btn.svg" alt="View user info">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </main>
+        </div>
+    </div>
 </body>
+
 </html>
