Style sidebar and navigation, add JS for toggling menu

--- a/designalytics/index.html
+++ b/designalytics/index.html
@@ -30,7 +30,8 @@
                     <a href="#" class="signout hide-mobile">Sign out</a>
                 </nav>
                 <a href="#" class="menu hide-tablet">
-                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="42" height="42" viewBox="0 0 42 42">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 42 42"
+                        style="fill:#FFFFFF;">
                         <path
                             d="M 0 7.5 L 0 12.5 L 50 12.5 L 50 7.5 Z M 0 22.5 L 0 27.5 L 50 27.5 L 50 22.5 Z M 0 37.5 L 0 42.5 L 50 42.5 L 50 37.5 Z">
                         </path>
@@ -174,6 +175,22 @@
             </main>
         </div>
     </div>
+
+    <script>
+        const menuBtn = document.querySelector('.menu');
+        const exitBtn = document.querySelector('.exit');
+        const menu = document.querySelector('aside');
+
+        menuBtn.addEventListener('click', function (e) {
+            e.preventDefault();
+            menu.classList.toggle('toggle-menu');
+        })
+
+        exitBtn.addEventListener('click', function (e) {
+            e.preventDefault();
+            menu.classList.toggle('toggle-menu');
+        })
+    </script>
 </body>
 
 </html>
